# Simulating-Robot-Assisted-Surgery

./: README.md  change_view.py  plot-real-time.py  real-time-tracker.py  test_node.cpp  trj.py
Vision Scripts/: 3d-model.py  map_robot.py
Vision Scripts/.data/: Reg-Poses2.file  wam-arm-cartesian-pose-output-.txt
ws_moveit/.catkin_tools/profiles/default/: devel_collisions.txt
ws_moveit/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ws_moveit/devel/.private/barrett_model/: .catkin  .rosinstall
ws_moveit/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
ws_moveit/devel/.private/moveit_playground/: .catkin  .rosinstall  setup.sh
ws_moveit/devel/.private/wam_moveit_config/: .catkin  .rosinstall  local_setup.sh
ws_moveit/devel/lib/moveit_playground/: test_node  wam_sim_node
ws_moveit/devel/lib/pkgconfig/: barrett_model.pc  catkin_tools_prebuild.pc  moveit_playground.pc  wam_moveit_config.pc
ws_moveit/logs/moveit_playground/: build.make.010.log.stderr
ws_moveit/src/: .rosinstall.bak
ws_moveit/src/moveit_playground/: CMakeLists.txt  package.xml
ws_moveit/src/moveit_playground/scripts/: readtrj.py  savetraj.py
ws_moveit/src/moveit_playground/src/: test_node.cpp  wam_sim_node.cpp
ws_moveit/src/wam_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws_moveit/src/wam_moveit_config/config/: fake_controllers.yaml  gazebo_wam.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml  wam.srdf
(+33 files in other folders)
